# gamux

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bridge/: __init__.py  config.toml  install-windows-service.ps1  service.py
src/gamux/: __init__.py  app.py  cli.py  config.py  paths.py  rumble.py  status.py  tmux.py
src/gamux/actions/: __init__.py  builtin.py  context.py  names.py  registry.py
src/gamux/controller/: __init__.py  buttons.py  reader.py
src/gamux/voice/: __init__.py  recognizer.py  source.py  vad.py
tests/: test_actions.py  test_app.py  test_bridge.py  test_cli.py  test_config.py  test_controller.py  test_infra.py  test_paths.py  test_voice.py
