[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gamux"
version = "2.0.0"
description = "Control tmux with a game controller and voice recognition"
readme = "README.md"
license = { text = "MIT" }
authors = [{name = "Gamux Project", url = "https://github.com/kb564/gamux"}]
requires-python = ">=3.11"
keywords = ["tmux", "controller", "voice", "whisper", "evdev"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "evdev>=1.7.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "faster-whisper>=1.0.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/kb564/gamux"
Repository = "https://github.com/kb564/gamux"
Issues = "https://github.com/kb564/gamux/issues"

[project.scripts]
gamux = "gamux.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gamux"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
